--- a/3rd-party-creatives/reo_light.html
+++ b/3rd-party-creatives/reo_light.html
@@ -4,73 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        html, body { 
-            background: transparent !important; 
-            margin: 0px !important; padding: 0px !important; 
-            -webkit-text-size-adjust: none !important; 
-        }
-        h4, ul, li { margin: 0px !important; padding: 0px !important; }
+        /* 1. Global Reset & Ad Tech Base */
+        html, body { background: transparent !important; margin: 0px !important; padding: 0px !important; -webkit-text-size-adjust: none !important; }
+        h4, ul, li, div { margin: 0px !important; padding: 0px !important; }
         * { box-sizing: border-box !important; }
         
-        #mk_native_ad_wrap { 
-            width: 100%; text-align: left; 
-            font-family: 'Pretendard Variable', 'Pretendard', 'Malgun Gothic', sans-serif; 
-            -webkit-font-smoothing: antialiased; 
-        }
+        /* 2. Brand Identity Framework */
+        #mk_native_wrap { width: 100%; text-align: left; font-family: 'Malgun Gothic', sans-serif; -webkit-font-smoothing: antialiased; }
         .ad_box { list-style: none !important; }
 
-        /* [수정] 행 높이를 40px로 축소 */
-        .ad_item { 
-            border-bottom: 1px solid #dadada !important; 
-            height: 40px !important; /* 80px -> 40px로 수정 */
-            display: flex !important; 
-            align-items: center !important; 
-            overflow: hidden !important;
-        }
+        /* 3. Layout Spec: Height 40px / Line #dadada */
+        .ad_item { border-bottom: 1px solid #dadada !important; height: 40px !important; display: flex !important; align-items: center !important; overflow: hidden !important; }
         .ad_item:last-child { border-bottom: none !important; }
 
-        .ad_link { 
-            display: flex !important; align-items: center !important; 
-            width: 100% !important; height: 100% !important; 
-            padding: 0px 10px !important; 
-            text-decoration: none !important; 
-        }
-
-        /* 폰트 15px / 행간 25px 유지 */
+        /* 4. Click Area & Typography */
+        .ad_link { display: flex !important; align-items: center !important; width: 100% !important; height: 100% !important; padding: 0px 10px !important; text-decoration: none !important; }
         .ad_title { 
-            margin: 0px !important; 
-            color: #212121 !important; 
-            font-size: 15px !important; 
-            font-weight: 600 !important; 
-            line-height: 25px !important; 
-            letter-spacing: -0.75px !important;
-            display: -webkit-box !important; 
-            -webkit-line-clamp: 1 !important; /* 좁은 높이를 고려해 1줄 권장 */
-            -webkit-box-orient: vertical !important;
-            overflow: hidden !important; 
-            text-overflow: ellipsis !important;
-            position: relative !important;
-            top: 1px !important;
+            margin: 0px !important; color: #212121 !important; 
+            font-size: 15px !important; font-weight: 600 !important; line-height: 25px !important; 
+            letter-spacing: -0.75px !important; display: -webkit-box !important; 
+            -webkit-line-clamp: 1 !important; -webkit-box-orient: vertical !important;
+            overflow: hidden !important; text-overflow: ellipsis !important;
+            position: relative !important; top: 1px !important;
         }
 
-        .ad_title::before { 
-            content: '·' !important; 
-            color: #FF7A00 !important; 
-            font-weight: 900 !important; 
-            font-size: 15px !important; 
-            margin-right: 6px !important; 
-            line-height: 1 !important;
-        }
-
+        /* 5. Signature Bullet 15px */
+        .ad_title::before { content: '·' !important; color: #FF7A00 !important; font-weight: 900 !important; font-size: 15px !important; margin-right: 6px !important; line-height: 1 !important; }
         .ad_link:hover .ad_title { opacity: 0.6 !important; transition: 0.2s !important; }
     </style>
 </head>
 <body>
-    <div id="mk_native_ad_wrap">
+    <div id="mk_native_wrap">
         <ul class="ad_box">
-            <li class="ad_item"><a href="#" class="ad_link"><h4 class="ad_title">라이트모드 - 높이 40px가 적용된 광고입니다.</h4></a></li>
-            <li class="ad_item"><a href="#" class="ad_link"><h4 class="ad_title">좁은 간격으로 뉴스 목록에 더욱 밀착되어 노출됩니다.</h4></a></li>
-            <li class="ad_item"><a href="#" class="ad_link"><h4 class="ad_title">세 번째 광고 줄 샘플 텍스트입니다.</h4></a></li>
+            <li class="ad_item"><a href="#" class="ad_link"><h4 class="ad_title">라이트모드 폰트/블릿 15px 및 행높이 40px 가이드입니다.</h4></a></li>
+            <li class="ad_item"><a href="#" class="ad_link"><h4 class="ad_title">모든 수치는 px 절대 단위로 고정되어 렌더링됩니다.</h4></a></li>
+            <li class="ad_item"><a href="#" class="ad_link"><h4 class="ad_title">세 번째 광고 줄 샘플 텍스트 영역입니다.</h4></a></li>
         </ul>
     </div>
 </body>
