--- a/view_EXP.html
+++ b/view_EXP.html
@@ -548,7 +548,7 @@
             //   · shufflePopularNewsNativeAds()에서 "기사 순서는 고정"된 상태에서
             //     광고만 기사 사이의 여러 위치 중 랜덤하게 섞입니다.
             // ------------------------------------------------------------------
-            if (deviceCategory === 'mobile' || deviceCategory === 'tablet') {
+            if (deviceCategory === 'smartphone' || deviceCategory === 'tablet') {
                 const BC_native_list_1_slot = googletag.defineSlot(
                     AdUnitPath,
                     [[320, 100], [320, 50], [1, 1], 'fluid'],
