--- a/view.html
+++ b/view.html
@@ -5,20 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>View GPT (Dynamic In-Article + Lazy Load)</title>
 
-    <!--
-        [공통 개념 안내 – GAM 적용 전반 메커니즘]
-
-        이 View GPT 스크립트는 "기사 상세 페이지(View)"에 대한
-        Google Ad Manager(GAM) 광고 구현 표준 템플릿입니다.
-
-        - 향후 HOME GPT / SECTION GPT / LIST GPT와 함께
-          "GAM 적용 가이드"에서 공통 메커니즘을 문서화할 예정입니다.
-        - 이 파일에는 View 페이지 특화 로직(본문 in-article 동적 주입,
-          우측 '이 시각 주요 뉴스' 섹션 내 Native 랜덤 배치 등)이 포함됩니다.
-        - 공통 개념(AdUnitPath, device_category, sizeMapping,
-          eager vs lazy Load, 페이지/슬롯 타게팅, IntersectionObserver 기반 Lazy Load 등)은
-          다른 GPT 템플릿에서도 동일한 패턴으로 재사용 가능합니다.
-    -->
     <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
     <script>
         // ------------------------------------------------------------------
@@ -182,8 +168,8 @@
             googletag.pubads().setTargeting('gpt_version', '2025');
             googletag.pubads().setPublisherProvidedId('PPID_DYNAMIC_HASHED_ID (SERVER_HASHED_ID)');
             //  - setPublisherProvidedId(PPID):
-            //    · 퍼블리셔가 서버 측에서 해시 처리한 1st-party ID를 넘기는 용도입니다.
-            //    · 개인 식별 정보는 모두 서버에서 해시/익명화한 뒤 전달해야 합니다.
+            //     · 퍼블리셔가 서버 측에서 해시 처리한 1st-party ID를 넘기는 용도입니다.
+            //     · 개인 식별 정보는 모두 서버에서 해시/익명화한 뒤 전달해야 합니다.
 
             // ▼▼▼ 동적 입력 키-값 ▼▼▼
             // - 실제 기사 데이터로 치환 필요
@@ -1089,11 +1075,6 @@
 
     <div class="container">
 
-        <!--
-            TC_billboard_X: 상단 빌보드 영역
-            - display()는 여기서, refresh()는 상단 GAM 초기화 블록에서 수행합니다.
-            - 데스크탑 전용 슬롯이며, eager 로딩 대상입니다.
-        -->
         <div id="TC_billboard_X" class="ad-slot ad-tc">
             <script>
                 googletag.cmd.push(function () {
@@ -1133,10 +1114,6 @@
                         <p>주요 성장 동력: 클라우드 AI 서비스, 엣지 AI 디바이스, 자율주행 차량용 칩. 이 박스 역시 뷰포트 확보에 기여합니다。</p>
                     </div>
 
-                    <!-- MC_article_rectangle_* 슬롯들은 동적 주입 대상
-                         - 초기에는 본문 내 미리 배치되어 있으나,
-                           setupInArticleAds()에서 기사 길이/시각 블록을 고려해
-                           위치가 재조정되거나 삭제될 수 있습니다. -->
                     <div id="MC_article_rectangle_1" class="ad-slot ad-mc-article"></div>
 
                     <p>전문가들은 현재의 기술 경쟁 구도가 과거의 메모리 치킨 게임과는 완전히 다른 양상을 보인다고 분석합니다. 단순히 생산량을 늘리는 것이 아니라, 얼마나 빠르게 고도화된 설계 및 파운드리 기술을 결합하느냐가 승패를 가르는 열쇠라는 것입니다. 이로 인해 반도체 설계 인력에 대한 수요가 급증하고 있으며, 국내외 대학의 관련 학과들은 정원 확대 요구를 받고 있습니다. 특히 첨단 패키징 기술이 중요성이 부각되고 있으며, 칩과 메모리를 통합하는 첨단 패키징 기술이 없이는 NPU의 연산 속도를 끌어올리기 어렵기 때문입니다. 이 내용이 첫 번째 본문 광고 전에 <strong>약 1 뷰포트 높이</strong>를 확보합니다。</p>
@@ -1154,10 +1131,6 @@
                     <p>정부는 AI 반도체 개발의 전주기적 지원을 위해 대규모 국가 연구개발(R&D) 프로젝트를 추진하고, 민간 투자 리스크를 완화하기 위한 세제 혜택 및 금융 지원을 확대해야 합니다. 특히 시스템 반도체 분야는 인프라 구축에 막대한 초기 비용이 들기 때문에, 공공 파운드리 시설의 개방 및 활용도를 높여 중소 팹리스 기업의 진입 장벽을 낮추는 것도 중요합니다. 또한, 국제 표준 선점을 위해 주요 기술 동맹에 적극적으로 참여하고, 수출 규제 등 글로벌 공급망의 불확실성에 대비하는 외교적 역량도 강화해야 합니다.</p>
                     <p>AI 반도체가 미래 산업의 핵심 동력인 만큼, 반도체 제조뿐만 아니라 소프트웨어 및 알고리즘과의 결합을 통한 '토털 솔루션' 제공 능력을 갖추는 것이 필수입니다. 국내 기업들은 NPU 성능을 최적화하는 전용 AI 소프트웨어 플랫폼을 구축하고, 고객사의 다양한 요구사항에 빠르게 대응할 수 있는 유연성을 확보해야 합니다. 이러한 노력들이 결실을 맺는다면, 한국은 AI 반도체 분야에서 명실상부한 기술 강국으로 도약할 수 있을 것입니다：</p>
 
-                    <!-- ✅ YouTube Embeds (시각 블록)
-                         - setupInArticleAds()에서 "시각 블록"으로 인식하는 대상입니다.
-                         - 시각 블록 주변에는 광고가 너무 촘촘히 붙지 않도록
-                           별도의 간격 규칙이 적용됩니다. -->
                     <div class="article-embed">
                         <div class="embed-wrapper">
                             <iframe
@@ -1176,14 +1149,13 @@
 
                     <p>새로운 기술의 물결은 멈추지 않습니다. 인공지능의 발전 속도에 발맞춰, 양자 컴퓨팅, 뉴로모픽 칩 등 차세대 반도체 기술에 대한 선도적인 연구가 병행되어야 합니다. 정부와 민간은 장기적인 관점에서 기초 과학 연구에 대한 투자를 강화하고, 실패를 용인하는 혁신적인 연구 문화를 조성함으로써, 미래 반도체 기술의 '씨앗'을 뿌려야 합니다. 이러한 선순환 구조를 통해 한국은 단순히 패스트 팔로워가 아닌, 기술 혁신을 주도하는 리더 국가로 자리매김할 수 있을 것입니다。</p>
                     <p>궁극적으로, 고성능 컴퓨팅(HPC)과 엣지 디바이스(Edge Device)를 위한 저전력 고효율 NPU 개발이 핵심 과제입니다. 서버급 AI 칩뿐만 아니라, 모바일, 자율주행, IoT 등 다양한 분야에서 맞춤형 칩 수요가 증가하고 있기 때문입니다. 이를 위해 정부 차원의 R&D 지원과 함께, 국내 반도체 학과 및 연구소의 인력 양성 프로그램 확대가 시급합니다. 인재 확보야말로 장기적인 '초격차'를 유지할 수 있는 근본적인 힘입니다。</p>
-                    <p>최근에는 칩렛(Chiplet) 기술과 첨단 패키징(Advanced Packaging) 기술의 중요성이 더욱 부각되고 있습니다. 서로 다른 기능을 하는 반도체를 하나의 패키지에 통합하여 성능을 극대화하는 이 기술은 AI 칩의 성능을 결정하는 핵심 요소가 되었습니다. 한국 기업들은 HBM과 같은 독보적인 메모리 기술을 활용하여, 칩렛 기반의 고성능 AI 반도체 솔루션을 세계 시장에 선제적으로 제시해야 합니다. 이는 메모리 강국에서 AI 반도체 강국으로 도약하는 중요한 분기점이 될 것입니다。</p>
+                    <p>최근에는 칩렛(Chiplet) 기술과 첨단 패키징(Advanced Packaging) 기술의 중요성이 더욱 부각되고 있습니다. 서로 다른 기능을 하는 반도체를 하나의 패키지에 통합하여 성능을 극대화하는 이 기술은 AI 칩의 성능을 결정하는 핵심 요소가 되었습니다. 한국 기업들은 HBM과 같은 독보적인 메모리 기술을 활용하여, 칩렛 기반의 고성능 AI 반도체 솔루션을 세계 시장에 선제적으로 제시해야 합니다. 이는 메모리 강국에서 AI 반도체 강국으로 도약하는 중요한 분기점이 될 것입니다 Scarborough.</p>
                     <p>또한, AI 반도체 스타트업 생태계 활성화가 필요합니다. 대기업의 파운드리 역량과 유망 스타트업의 혁신적인 NPU 설계 아이디어가 결합될 때 시너지가 발생합니다. 정부는 스타트업이 초기 개발 단계에서 겪는 테스트베드 접근성 문제나 자금 조달 문제를 해소하는 데 집중해야 합니다. 궁극적으로, 한국이 AI 반도체 분야에서 글로벌 리더십을 확보하기 위해서는 민간의 혁신 의지와 정부의 전략적 지원이 유기적으로 결합되는 'K-칩스 동맹'이 필수적입니다. 향후 5년이 한국 반도체 산업의 미래 50년을 좌우할 중요한 시기가 될 것입니다.</p>
 
                     <p><strong>[본문 4: 미래 전망과 정책 방향]</strong> AI 반도체 시장의 승자는 기술력과 더불어 '생태계 확장' 능력에 따라 결정될 것입니다. 단순히 칩의 성능을 높이는 것을 넘어, 그 칩을 활용할 수 있는 소프트웨어 플랫폼과 개발자 커뮤니티를 얼마나 빠르게 구축하느냐가 중요합니다. 엔비디아의 CUDA 생태계처럼, 한국형 AI 칩도 자체적인 소프트웨어 인프라를 구축하고, 국내외 개발자들에게 개방하여 활용도를 높여야 합니다. 이를 위해, 국내 기업들은 오픈소스 기반의 AI 플랫폼 개발에 적극 참여하고, 협력사들과의 데이터 공유 및 공동 개발을 위한 협의체를 구성하는 것이 시급합니다.</p>
                     <p>또한, 국제적인 협력과 외교적 노력이 뒷받침되어야 합니다. 미국과 중국 간의 기술 패권 경쟁이 심화되는 상황에서, 한국은 특정 국가에 종속되지 않고 안정적인 공급망을 유지할 수 있는 '전략적 자율성'을 확보해야 합니다. 핵심 소재, 부품, 장비(소부장)에 대한 국산화율을 높이는 동시에, 미국, 유럽 등 우방국과의 반도체 동맹을 강화하여 기술 표준 및 수출 규제 대응 능력을 키워야 합니다. 이는 단기적인 성과보다는 장기적인 국가 안보 및 산업 경쟁력 차원에서 접근해야 할 문제입니다.</p>
                     <p>교육 시스템의 혁신도 필수적입니다. AI 반도체 산업이 요구하는 융합적 사고와 실무 능력을 갖춘 인재를 양성하기 위해, 대학 교육 과정에 AI, 반도체 설계, 소프트웨어 코딩을 통합하는 새로운 커리큘럼 도입이 절실합니다. 정부는 계약학과, 특성화 대학원 등 인력 양성 프로그램을 확대하고, 기업들에게 인재 채용 및 교육에 대한 강력한 인센티브를 제공해야 합니다. 결국, 반도체는 '사람'이 만드는 것이며, 우수한 인재만이 미래의 기술 패권을 쥘 수 있는 열쇠입니다。</p>
 
-                    <!-- MC_article_rectangle_5 ~ 8: 동적 재배치 대상 -->
                     <div id="MC_article_rectangle_5" class="ad-slot ad-mc-article"></div>
                     <div id="MC_article_rectangle_6" class="ad-slot ad-mc-article"></div>
                     <div id="MC_article_rectangle_7" class="ad-slot ad-mc-article"></div>
@@ -1197,7 +1169,6 @@
                     <div class="like-share-button">👍 좋아요 (128)</div>
                 </div>
 
-                <!-- BC_byline_rectangle: 기사 byline 하단 광고 영역 (Lazy Load 대상) -->
                 <div id="BC_byline_rectangle" class="ad-slot ad-bc-byline" data-googletag-enabled="false"></div>
 
                 <div class="comment-section">
@@ -1212,7 +1183,6 @@
                     </div>
                 </div>
 
-                <!-- BC_billboard_rectangle: 댓글 하단 빌보드 광고 (Lazy Load 대상) -->
                 <div id="BC_billboard_rectangle" class="ad-slot ad-bc-comment" data-googletag-enabled="false"></div>
 
                 <div class="extra-content-section">
@@ -1233,37 +1203,21 @@
 
                 <div class="related-box">
                     <h4>**이 시각 주요 뉴스** (10개로 확장)</h4>
-                    <!--
-                        이 시각 주요 뉴스 리스트 구성:
-
-                        - 기사 LI(5개, .article-item):
-                          · CSS 카운터(hotNewsRank)에 의해 1~5 번호 자동 생성
-                          · shufflePopularNewsNativeAds() 이후에도 기사 DOM 순서/번호는 항상 고정
-                        - Native LI(BC_native_list_1/2, .native-ad-list-item):
-                          · 기사 LI 사이의 여러 후보 위치 중 랜덤 위치에 삽입
-                          · 번호/라벨 없이 광고 슬롯만 LI 사이에 자연스럽게 노출
-                          · 기사 개수 카운트에는 포함되지 않음
-                    -->
                     <ul class="related-list">
                         <li class="article-item"><a href="#">금리 추가 인상 없을 듯... 가계 부담 완화 기대</a></li>
                         <li class="article-item"><a href="#">주요 기업, 하반기 채용 규모 전년 대비 20% 확대</a></li>
 
-                        <!-- BC_native_list_1: 이 시각 주요 뉴스 목록 중간에 삽입되는 Native 광고/위젯 (모바일/태블릿 전용)
-                             - CSS 카운터에서는 제외되며, 화면상 번호/AD 라벨 없이 광고 크리에이티브만 노출 -->
                         <li id="BC_native_list_1" class="native-ad-list-item" data-googletag-enabled="false"></li>
 
                         <li class="article-item"><a href="#">정부, 청년 주거 정책 특별 대책 발표</a></li>
                         <li class="article-item"><a href="#">글로벌 증시, AI 기술주 실적에 따라 희비 교차</a></li>
 
-                        <!-- BC_native_list_2: 이 시각 주요 뉴스 목록 중간에 삽입되는 Native 광고/위젯 (모바일/태블릿 전용)
-                             - CSS 카운터에서는 제외되며, 화면상 번호/AD 라벨 없이 광고 크리에이티브만 노출 -->
                         <li id="BC_native_list_2" class="native-ad-list-item" data-googletag-enabled="false"></li>
 
                         <li class="article-item"><a href="#">유럽 경제, 긴축 완화 시그널 포착</a></li>
                     </ul>
                 </div>
 
-                <!-- MR_side_rail_X: 우측 레일 광고 (데스크탑 전용, Lazy Load 대상) -->
                 <div id="MR_side_rail_X" class="ad-slot ad-mr" data-googletag-enabled="false">
                     <script>
                         googletag.cmd.push(function () {
@@ -1291,10 +1245,10 @@
         //   IntersectionObserver 기반 Lazy Load 구현 패턴입니다.
         //
         // - 구성 요소:
-        //   · LAZY_AD_SLOT_IDS     : Lazy 대상 광고 div id 리스트
-        //   · lazyAdSlotsHTML      : DOM에서 관찰할 실제 요소 목록
-        //   · lazyGamSlots         : GAM에 정의된 슬롯 객체 목록
-        //   · lazyObserver         : IntersectionObserver 인스턴스
+        //   · LAZY_AD_SLOT_IDS      : Lazy 대상 광고 div id 리스트
+        //   · lazyAdSlotsHTML       : DOM에서 관찰할 실제 요소 목록
+        //   · lazyGamSlots          : GAM에 정의된 슬롯 객체 목록
+        //   · lazyObserver          : IntersectionObserver 인스턴스
         //
         // - 동작 흐름:
         //   1) DOMContentLoaded 시:
@@ -1625,11 +1579,29 @@
                 });
             }
 
+            /**
+             * [객관적 최적화: 디바이스별 rootMargin 동적 할당]
+             * - 한국의 안정적인 네트워크 인프라와 사용자 스크롤 속도를 고려한 '스윗 스팟' 수치 적용
+             * - Smartphone: 600px (빠른 플릭 스크롤 대응)
+             * - Tablet: 500px (넓은 화면비 고려)
+             * - Desktop: 400px (글로벌 미디어 표준값)
+             */
+            const ua = navigator.userAgent.toLowerCase();
+            let marginValue = '400px'; // Desktop 기본값
+
+            if (/mobile|android|iphone|ipad|ipod/.test(ua) || window.innerWidth <= 768) {
+                marginValue = '600px'; // Smartphone
+            } else if (window.innerWidth <= 1024) {
+                marginValue = '500px'; // Tablet
+            }
+
             const options = {
                 root: null,
-                rootMargin: '0px 0px 100px 0px',
+                rootMargin: `0px 0px ${marginValue} 0px`,
                 threshold: 0.0
             };
+
+            console.log(`🚀 [Lazy Load] rootMargin optimized for ${marginValue} based on device detection.`);
 
             lazyObserver = new IntersectionObserver(function (entries, observerInstance) {
                 entries.forEach(entry => {
@@ -1782,8 +1754,8 @@
         //     DOM이 준비된 시점에 getBoundingClientRect()를 사용하는 것이 안정적입니다.
         //
         // - 실행 순서:
-        //   1) setupInArticleAds()           → 본문 내 in-article 동적 배치 + 미사용 슬롯 제거
-        //   2) setupLazyLoading()            → Lazy 대상 슬롯 수집 + GAM 슬롯 매핑 + Observer 생성
+        //   1) setupInArticleAds()            → 본문 내 in-article 동적 배치 + 미사용 슬롯 제거
+        //   2) setupLazyLoading()             → Lazy 대상 슬롯 수집 + GAM 슬롯 매핑 + Observer 생성
         //   3) shufflePopularNewsNativeAds() → 우측 '이 시각 주요 뉴스' 내 Native 광고 랜덤 배치 (기사 순서 고정, 광고만 셔플)
         //   4) startObservingLazySlots()     → IntersectionObserver 관찰 시작
         // ==========================================================
