--- a/3rd-party-creatives/taboola2.html
+++ b/3rd-party-creatives/taboola2.html
@@ -15,10 +15,11 @@
             --c-txt: #212121;
             --c-line: #dadada;
             --c-source: #888888;
-            --c-ad-bg: rgba(0, 0, 0, 0.3); /* 배지 투명도 0.3 적용 */
-            --c-ad-txt: #d1d1d1;
+            --c-ad-bg: rgba(165, 165, 165, 0.7); /* 이전 요청 스타일 계승 */
+            --c-ad-txt: #ffffff;
         }
 
+        /* 매경 표준 다크모드 대응 */
         [data-dark="true"], 
         @media (prefers-color-scheme: dark) {
             :root {
@@ -41,9 +42,9 @@
             transition: background-color 0.3s, color 0.3s;
         }
 
-        /* [4. Container & Layout] - 4열 대응을 위해 너비 1000px 확장 */
+        /* [4. Container & Layout] - 요청하신 최대 폭 900px 제한 */
         .mk-recommend-widget {
-            max-width: 1000px; 
+            max-width: 900px; 
             margin: 40px auto;
             padding: 0;
         }
@@ -53,22 +54,20 @@
 
         .widget-grid { display: grid; width: 100%; }
 
-        /* [5. Desktop & Tablet (>= 768px) Grid] - 4열(2행 4열) 구성 */
+        /* [5. Desktop & Tablet (>= 768px) Grid] - 2행 4열 구성 */
         @media only screen and (min-width: 768px) {
-            .widget-grid { grid-template-columns: repeat(4, 1fr); } /* 4열로 변경 */
+            .widget-grid { grid-template-columns: repeat(4, 1fr); } 
             .grid-item {
-                padding: 12.5px 15px; /* 행간 25px 유지 (상하 12.5) */
+                padding: 12.5px 12px; /* 900px 너비에 맞춰 내부 여백 소폭 조정 */
                 border-left: 1px solid var(--c-line);
                 display: flex; flex-direction: column;
             }
-            /* 4열 기준 구분선 및 패딩 초기화 */
+            /* 4열 기준 구분선 제어 */
             .grid-item:nth-child(4n+1) { border-left: none; padding-left: 0; }
             .grid-item:nth-child(4n) { padding-right: 0; }
-            
-            @media (max-width: 1023px) {
-                .mk-recommend-widget { max-width: 760px; }
-            }
         }
+
+        /*  */
 
         /* [6. Smartphone (< 768px) Grid] */
         @media only screen and (max-width: 767px) {
@@ -81,13 +80,14 @@
             }
             .grid-item:nth-child(2n+1) { padding-right: 10px; }
             .grid-item:nth-child(2n) { padding-left: 10px; }
+            /* 마지막 행 구분선 제거 */
             .grid-item:nth-child(7), .grid-item:nth-child(8) { border-bottom: none !important; }
         }
 
         /* [7. Content Elements] */
         .item-link { text-decoration: none; display: block; height: 100%; color: inherit; }
         .img-wrapper {
-            position: relative; width: 100%; padding-bottom: 60.25%;
+            position: relative; width: 100%; padding-bottom: 60.25%; /* 16:9 비율 */
             overflow: hidden; background-color: #f2f2f2;
         }
         .img-wrapper img {
@@ -96,18 +96,21 @@
         }
         .grid-item a:hover img { transform: scale(1.05); }
 
+        /* AD 뱃지 (기존 attribution 스타일 계승) */
         .grid-item.is-ad .img-wrapper::after {
             content: 'AD'; position: absolute; top: 0; left: 0;
             background-color: var(--c-ad-bg); color: var(--c-ad-txt);
             font-size: 1.1rem; font-weight: 400; padding: 3px 7px; z-index: 10;
         }
 
+        /* Typography */
         .txt-area { padding-top: 15px; }
         .ad-title {
-            font-size: 1.5rem; font-weight: 600; line-height: 1.4; color: var(--c-txt);
-            margin: 0 0 10px 0 !important; /* 기사제목-출처 사이 여백 10px */
+            font-size: 1.45rem; /* 900px 너비 가독성을 위해 소폭 축소 */
+            font-weight: 600; line-height: 1.4; color: var(--c-txt);
+            margin: 0 0 10px 0 !important; 
             display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical;
-            overflow: hidden; min-height: 4.2rem;
+            overflow: hidden; min-height: 4.0rem;
         }
 
         .bottom-info { display: flex; justify-content: space-between; align-items: center; }
@@ -132,7 +135,7 @@
                 <a href="#" class="item-link">
                     <div class="img-wrapper"><img src="https://picsum.photos/400/225?random=101" alt="광고"></div>
                     <div class="txt-area">
-                        <h4 class="ad-title">"노후 자금 고민 끝" 은퇴 후 월 300만원 보장받는 부동산</h4>
+                        <h4 class="ad-title">"노후 자금 고민 끝" 은퇴 후 월 300만원 보장 부동산</h4>
                         <div class="bottom-info">
                             <span class="source">리얼티랩</span>
                             <span class="cta-button">문의하기</span>
